# ft-sdk

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.github/workflows/: test.yml
examples/001-hello-world/: .gitignore  Cargo.toml  README.md  build.sh  index.ftd
examples/001-hello-world/.fastn/: config.json
examples/001-hello-world/src/: lib.rs
examples/002-form-handling/: Cargo.toml  FASTN.ftd  build.sh  index.ftd
examples/002-form-handling/src/: lib.rs
examples/002-handling-form/: .gitignore  Cargo.toml  FASTN.ftd  README.md  build.sh  foo.ftd  index.ftd
examples/002-handling-form/src/: lib.rs
examples/003-migration/: Cargo.toml  FASTN.ftd  README.md  build.sh  index.ftd
examples/003-migration/migrations/: 0001-account-table.sql  0001-create-todo-iterm.sql
examples/003-migration/src/: lib.rs
examples/004-ft-stripe/: Cargo.toml  FASTN.ftd  README.md  build.sh  index.ftd
examples/004-ft-stripe/src/: lib.rs
examples/auth-provider/: Cargo.toml
examples/auth-provider/src/: create_account.rs  layout.rs  lib.rs
examples/hello-world/: Cargo.toml  FASTN.ftd
examples/hello-world-diesel/: Cargo.toml  FASTN.ftd  README.md  index.ftd
examples/hello-world-diesel/src/: lib.rs
examples/hello-world/src/: lib.rs
examples/sample-pg/: Cargo.toml
examples/sample-pg/src/: diesel.rs
examples/sample-sqlite/: Cargo.toml
f/: Cargo.toml
f/src/: main.rs
fo/: Cargo.toml
fo/src/: main.rs
foo/: Cargo.toml
foo/src/: main.rs
ft-derive/: Cargo.toml
ft-derive/src/: handler.rs  lib.rs
ft-sdk/: Cargo.toml
ft-sdk/migrations/: 0001-initial.sql  0002-fastn-email-queue.sql  0003-fastn-user-identity-nullable-and-fastn-session-data-non-nullable.sql  0003-make-fastn-user-identity-nullable.sql  0003-update-fastn-user-identity.sql
ft-sdk/src/: auth.rs  auth_provider.rs  chr.rs  cookie.rs  cookie_ext.rs  crypto.rs  data.rs  email.rs  error.rs  form.rs  from_request.rs  handler.rs  http.rs  in_.rs  into_cookie.rs  json_body.rs  layout.rs  lib.rs  migration.rs  processor.rs  query.rs  rng.rs  schema.rs  session.rs  tracker.rs  utils.rs  uuid.rs  wrapped_handler.rs  wrapped_processor.rs
ft-sdk/src/auth/: db.rs  mod.rs  provider.rs  schema.rs  session.rs  utils.rs
ft-sdk/src/from_request/: app_url.rs  config.rs  cookie.rs  default.rs  field_error.rs  form.rs  handler.rs  headers.rs  hidden.rs  host.rs  json.rs  mod.rs  mountpoint.rs  optional.rs  package.rs  path.rs  query.rs  raw_bytes_handler.rs  required.rs  required_string.rs  scheme.rs  text.rs  wrapped_processor.rs
ft-sdk/src/migration/: mod.rs  sqlite.rs
ft-sdk/src/session/: mod.rs  session_data.rs
ft-sqlite-backend/: Cargo.toml
ft-sqlite-backend/src/: backend.rs  bind_collector.rs  lib.rs  sqlite_value.rs
ft-sqlite-backend/src/query_builder/: insertable.rs  limit_offset.rs  returning.rs
ft-sqlite-backend/src/types/: date_time.rs  mod.rs
ft-stripe/: Cargo.toml  README.md
ft-stripe/src/: client.rs  customer.rs  error.rs  ids.rs  lib.rs  params.rs  payment_source.rs  resources.rs  types.rs
ft-stripe/src/async_stripe/: error.rs  ids.rs  mod.rs  params.rs  resources.rs
ft-stripe/src/async_stripe/resources/: account_ext.rs  balance_ext.rs  balance_transaction_ext.rs  bank_account_ext.rs  card.rs  charge_ext.rs  checkout_session_ext.rs  credit_note_ext.rs  currency.rs  customer_balance_transaction_ext.rs  customer_ext.rs  generated.rs  invoice_ext.rs  issuing_authorization_ext.rs  issuing_card_ext.rs  issuing_dispute_ext.rs  issuing_merchant_data.rs  issuing_transaction_ext.rs  line_item_ext.rs  login_links_ext.rs  order_ext.rs  payment_intent_ext.rs  payment_method_ext.rs  payment_source.rs  payout_ext.rs  placeholders.rs  price_ext.rs  product_ext.rs  review_ext.rs  setup_intent_ext.rs  source_ext.rs  subscription_ext.rs  token_ext.rs  transfer_reversal_ext.rs  types.rs  usage_record_ext.rs  webhook_endpoint_ext.rs  webhook_events.rs
ft-stripe/src/client/: impl_webhook_events.rs  mod.rs  request_strategy.rs  stripe.rs
ft-stripe/src/resources/: account.rs  alipay_account.rs  application.rs  application_fee.rs  balance.rs  balance_transaction.rs  balance_transaction_ext.rs  bank_account.rs  bank_account_ext.rs  card.rs  charge.rs  charge_ext.rs  checkout_session.rs  connect_collection_transfer.rs  coupon.rs  currency.rs  customer.rs  customer_ext.rs  discount.rs  dispute.rs  event.rs  fee_refund.rs  file.rs  file_link.rs  invoice.rs  invoice_ext.rs  invoiceitem.rs  issuing_authorization.rs  issuing_authorization_ext.rs  issuing_card.rs  issuing_card_ext.rs  issuing_cardholder.rs  issuing_dispute.rs  issuing_dispute_ext.rs  issuing_merchant_data.rs  issuing_transaction.rs  issuing_transaction_ext.rs  item.rs  line_item.rs  line_item_ext.rs  (+43 more)
ft-sys/: Cargo.toml
ft-sys-shared/: Cargo.toml
ft-sys-shared/src/: email.rs  lib.rs  rusqlite_value.rs  sqlite.rs
ft-sys-shared/src/email/: mod.rs  sqlite.rs
ft-sys/src/: crypto.rs  db_error.rs  email.rs  env.rs  http.rs  lib.rs  memory.rs
ft-sys/src/diesel/: connection.rs  cursor.rs  row.rs
ft-sys/src/diesel_pg/: connection.rs  cursor.rs  db_error.rs  mod.rs  row.rs
ft-sys/src/diesel_sqlite/: backend.rs  bind_collector.rs  chrono.rs  connection.rs  mod.rs  no_instrumentation.rs  sqlite_value.rs  types.rs  value.rs
ft-sys/src/diesel_sqlite/connection/: bind_collector.rs  mod.rs  sqlite_value.rs
ft-sys/src/diesel_sqlite/query_builder/: date_time.rs  insertable.rs  limit_offset.rs  mod.rs  returning.rs
ft-sys/src/diesel_sqlite/types/: date_time.rs  json.rs  jsonb.rs  mod.rs
licenses/: LICENSE-MIT
sample-pg/: Cargo.toml  README.md
sample-pg/src/: diesel.rs
sample-sqlite/: Cargo.toml
sample-sqlite/src/: diesel.rs  lib.rs
sample-wasm/: Cargo.toml
sample-wasm/src/: diesel.rs
scripts/: add-async-stripe-credit.py  check.sh
stripe/: Cargo.toml
stripe/src/: lib.rs
