[workspace]
members = [
    "examples/001-hello-world",
    "examples/002-handling-form",
    "examples/003-migration",
    # "examples/sample-pg",
    # "examples/sample-sqlite",
    # "examples/auth-provider",
    "ft-derive",
    "ft-sdk",
    "ft-sys",
    "ft-sys-shared",
]
exclude = ["examples", "f", "ft-stripe"]
resolver = "2"

[workspace.package]
authors = [
    "Amit Upadhyay <upadhyay@gmail.com>",
    "Arpita Jaiswal <arpita@fifthtry.com>",
    "Rithik Seth <rithik@fifthtry.com>",
    "Siddhant Kumar <siddhantk232@gmail.com>",
]
edition = "2021"
description = "ft-sdk: Rust SDK for fastn and FifthTry Platform"
license = "BSD-3-Clause"
repository = "https://github.com/FifthTry/ft-sdk"
homepage = "https://www.FifthTry.com"


[workspace.dependencies]
anyhow = "1"
http = "1"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
chrono = { version = "0.4", default-features = false, features = ["serde"] }
cookie = "0.18"
diesel = { version = "2.2.4", features = ["serde_json"] }
serde_urlencoded = "0.7"
include_dir = "0.7"
rand_core = "0.6"
uuid = { version = "1.8", default-features = false, features = ["v8"] }
ft-sys-shared = { path = "ft-sys-shared", version = "0.1.4" }
ft-derive = { path = "ft-derive", version = "0.1.1" }
ft-sys = { path = "ft-sys", version = "0.1.5" }
ft-sdk = { path = "ft-sdk", version = "0.1.12" }
serde_qs = "0.13"
serde_path_to_error = "0.1"
smart-default = "0.7"
smol_str = "0.3"

[workspace.dependencies.http-types]
version = "2.12.0"
default-features = false


[workspace.dependencies.rusqlite]
version = "0.31"
default-features = false


[workspace.dependencies.serde_sqlite_jsonb]
# we are using our own fork as the original crate does not compile again wasm
# path = "../serde-sqlite-jsonb"
package = "fifthtry-serde_sqlite_jsonb"
version = "0.1"
