[workspace]
members = [
    "examples/001-hello-world",
    "examples/002-handling-form",
    "examples/003-migration",
    # "examples/sample-pg",
    # "examples/sample-sqlite",
    # "examples/auth-provider",
    "ft-derive",
    "ft-sdk",
    "ft-sys",
    "ft-sys-shared",
]
exclude = ["examples", "f", "ft-stripe"]
resolver = "2"

[workspace.package]
authors = [
    "Amit Upadhyay <upadhyay@gmail.com>",
    "Arpita Jaiswal <arpita@fifthtry.com>",
    "Rithik Seth <rithik@fifthtry.com>",
    "Siddhant Kumar <siddhantk232@gmail.com>",
]
edition = "2021"
description = "ft-sdk: Rust SDK for fastn and FifthTry Platform"
license = "BSD-3-Clause"
repository = "https://github.com/FifthTry/ft-sdk"
homepage = "https://www.FifthTry.com"


[workspace.dependencies]
anyhow = "1"
http = "1"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", default-features = false, features = ["serde"] }
cookie = "0.18"
diesel = { version = "2.2.4", features = ["serde_json"] }
serde_urlencoded = "0.7"
rand_core = "0.6"
uuid = { version = "1.8", default-features = false, features = ["v8"] }
ft-sys-shared = { path = "ft-sys-shared", version = "0.2.0" }
ft-derive = { path = "ft-derive", version = "0.1.2" }
ft-sys = { path = "ft-sys", version = "0.2.0" }
ft-sdk = { path = "ft-sdk", version = "0.3.0" }
smallvec = { version = "2.0.0-alpha.10", features = ["serde"] }

[workspace.dependencies.rusqlite]
version = "0.31"  # DO NOT UPDATE THIS
default-features = false


[workspace.dependencies.serde_sqlite_jsonb]
# we are using our own fork as the original crate does not compile again wasm
# path = "../serde-sqlite-jsonb"
package = "fifthtry-serde_sqlite_jsonb"
version = "0.1"
