[package]
name = "ft-sdk"
version = "0.1.15"
description = "ft-sdk: SDK for building FifthTry Applications"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = ["sqlite-default"]
postgres-default = ["postgres"]
postgres = ["ft-sys/postgres", "diesel"]
sqlite-default = ["sqlite"]
sqlite = ["ft-sys/sqlite", "diesel"]
auth-provider = []
field-extractors = []

[dependencies]
anyhow.workspace = true
ft-sys.workspace = true
ft-sys-shared.workspace = true
ft-derive.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
http.workspace = true
bytes.workspace = true
serde_urlencoded.workspace = true
diesel = { workspace = true, optional = true }
include_dir.workspace = true
rand_core.workspace = true
uuid.workspace = true

[dev-dependencies]
pretty_assertions = "1"
