[package]
name = "ft-sdk"
version = "0.3.2"
description = "ft-sdk: SDK for building FifthTry Applications"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = ["sqlite-default"]
postgres-default = ["postgres"]
postgres = ["ft-sys/postgres", "diesel"]
sqlite-default = ["sqlite"]
sqlite = ["ft-sys/sqlite", "diesel"]
auth-provider = []
debug = []
field-extractors = []

[dependencies]
anyhow.workspace = true
bytes.workspace = true
chrono.workspace = true
diesel = { workspace = true, optional = true }
ft-derive.workspace = true
ft-sys-shared.workspace = true
ft-sys.workspace = true
http.workspace = true
rand.workspace = true
rand_core.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
cookie.workspace = true
