[package]
name = "ft-sqlite-backend"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
diesel_derives = "2"
chrono.workspace = true

[dependencies.diesel]
version = "2"
features = [
    "i-implement-a-third-party-backend-and-opt-into-breaking-changes",
    "chrono",
    # we have intentionally added "postgres-backend" here, as without it chorno stuff does
    # not work.
    "postgres_backend"
]
default-features = false

