[package]
name = "ft-stripe"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
http.workspace = true
ft-sdk.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
serde_qs.workspace = true
stripe-rust.workspace = true
