[package]
name = "ft-sys-shared"
version = "0.1.3"
description = "ft-sdk: SDK for building FifthTry Applications"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true


[features]
rusqlite = ["dep:rusqlite"]

[dependencies]
http.workspace = true
bytes.workspace = true
serde.workspace = true
thiserror.workspace = true
rusqlite = { workspace = true, optional = true }
chrono.workspace = true
