[package]
name = "ft-sys-shared"
version = "0.2.0"
description = "ft-sdk: SDK for building FifthTry Applications"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true


[features]
rusqlite = ["dep:rusqlite"]
host-only = []

[dependencies]
http.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
rusqlite = { workspace = true, optional = true }
chrono.workspace = true
smallvec.workspace = true
