[package]
name = "ft-sys"
version = "0.1.2"
description = "ft-sdk: SDK for building FifthTry Applications"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = ["postgres", "sqlite", "time", "chrono"]
time = []
postgres = ["diesel/postgres_backend"]
sqlite = []
chrono = []

[dependencies]
serde.workspace = true
serde_json.workspace = true
http.workspace = true
bytes.workspace = true
ft-sys-shared = { path = "../ft-sys-shared", version = "0.1.1" }
chrono.workspace = true

[dependencies.diesel]
version = "2"
features = ["i-implement-a-third-party-backend-and-opt-into-breaking-changes", "chrono"]

[dependencies.diesel_derives]
version = "2"

