[package]
name = "ft-sys"
version = "0.1.2"
description = "ft-sdk: SDK for building FifthTry Applications"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = ["sqlite-default"]
postgres-default = ["postgres"]
postgres = ["diesel/postgres_backend", "diesel", "diesel_derives"]
sqlite-default = ["sqlite"]
sqlite = ["diesel", "diesel_derives", "diesel/postgres_backend", "serde_sqlite_jsonb"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
http.workspace = true
bytes.workspace = true
ft-sys-shared = { path = "../ft-sys-shared", version = "0.1.1-alpha.1" }
chrono.workspace = true
serde_sqlite_jsonb = { workspace = true, optional = true }


[dependencies.diesel]
version = "2"
features = ["i-implement-a-third-party-backend-and-opt-into-breaking-changes", "chrono"]
default-features = false
optional = true

[dependencies.diesel_derives]
version = "2"
optional = true

