[package]
name = "ft-sys"
version = "0.1.5"
description = "ft-sdk: SDK for building FifthTry Applications"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
postgres = ["diesel/postgres_backend", "diesel", "diesel_derives"]
sqlite = ["diesel", "diesel_derives", "diesel/postgres_backend"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
http.workspace = true
bytes.workspace = true
ft-sys-shared.workspace = true
chrono.workspace = true
thiserror.workspace = true


[dependencies.diesel]
version = "2"
features = ["i-implement-a-third-party-backend-and-opt-into-breaking-changes", "chrono"]
default-features = false
optional = true

[dependencies.diesel_derives]
version = "2"
optional = true

