[package]
name = "sample-wasm"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
opt-level = 's'

[lib]
crate-type = ["cdylib"]

[dependencies]
ft-sdk = { version = "0.1", path = "../ft-sdk/", features = ["sqlite-default"] }
http = "1"
bytes = "1"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.diesel]
version = "2"
default-features = false

