[package]
name = "hello-world"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
ft-sdk = { version = "0.1", path = "../../ft-sdk" }
http = "1"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
include_dir = "0.7"
diesel = { version = "2", default-features = false }
