[package]
name = "sample-sqlite"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
opt-level = 's'

[lib]
crate-type = ["cdylib"]

[dependencies]
ft-sdk = { path = "../../ft-sdk/", features = ["sqlite-default"] }
http = "1"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"], default-features = false }

[dependencies.diesel]
version = "2"
default-features = false
